alignement correcte des éléments du header

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,9 @@ header {
     border-color: orangered ;
     padding: 20px 10px;
     overflow: hidden;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 50% 50%;
 }
 
 #logo-site{
@@ -16,6 +19,11 @@ ul{
     list-style-type: none;
     padding: 0px;
     margin: 0px;
+}
+
+#right_header{
+    display: flex;
+    justify-content: flex-end;
 }
 
 
